--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
-
-
-
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -17,6 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.NotificationChannels"
         tools:targetApi="31">
+        <receiver android:name=".NotificationReceiver"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -26,10 +25,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".NotificationReceiver"
-            >
 
-        </service>
     </application>
 
 </manifest>
